@@ -21,6 +21,8 @@
   (thanks to Jochen Sprickerhof).
 - TW-1588 Most Export scripts cannot deal with new export format (thanks to
   Scott Carter).
+- TW-1590 syntax of rcfile not documented (whitespace, line continuation)
+          (thanks to Scott M).
 - Setting 'bulk' to zero is interpreted as infinity, which means there is no
   amount of changes that is considered dangerous (thanks to Tomas Babej).
 - Disable hooks in bash completion script.  Hooks were previously able to
